tests/test_scope/bad/scope_call_missing.catala_en
```catala
declaration scope Toto:
  context bar content integer
  input baz content decimal
  output foo content integer

scope Toto:
  definition bar equals 1
  definition foo equals 1212 + bar

declaration scope Titi:
  output fizz content Toto
scope Titi:
  definition fizz equals Toto of {--bar: 1}
```

```catala-test-inline
$ catala dcalc -s Titi
[ERROR] Definition of input variable 'baz' missing in this scope call

┌─⯈ tests/test_scope/bad/scope_call_missing.catala_en:14.25-43:
└──┐
14 │   definition fizz equals Toto of {--bar: 1}
   │                          ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾


Declaration of the missing input variable
┌─⯈ tests/test_scope/bad/scope_call_missing.catala_en:4.8-11:
└─┐
4 │   input baz content decimal
  │         ‾‾‾

#return code 255#
```
